--- a/PlanIt/Views/FilterAllView.axaml
+++ b/PlanIt/Views/FilterAllView.axaml
@@ -14,9 +14,22 @@
     </Design.DataContext>
     
     <Grid RowDefinitions="Auto, *" RowSpacing="2">
-        <Border Padding="25 8" HorizontalAlignment="Stretch">
+        <Border Padding="17 10" HorizontalAlignment="Stretch">
             <Grid>
-                <TextBlock Classes="t-b t-18" Foreground="{DynamicResource Text}">All Tasks</TextBlock>
+                <Grid ColumnDefinitions="*, Auto">
+                    <TextBlock Classes="t-sb t-24" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="16 0 0 0" Text="All" Foreground="{DynamicResource TextAll}"></TextBlock>
+                    <Button Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="30" Height="30" Classes="panelBtn" Command="{Binding AddNewTask}">
+                        <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
+                        <Button.Styles>
+                            <Style Selector="">
+                                 <Setter Property="Background" Value="{DynamicResource TextAll}"></Setter>
+                            </Style>
+                            <Style Selector=":pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                                <Setter Property="Background" Value="{DynamicResource TextAllHover}"></Setter>
+                            </Style>
+                        </Button.Styles>
+                    </Button>
+                </Grid>
             </Grid>
         </Border>
         <Border Grid.Row="1" Padding="17 0">
@@ -24,29 +37,47 @@
                 <ItemsControl ItemsSource="{Binding ViewController.NodesCollection}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate DataType="models:Node">
-                            <Grid RowDefinitions="Auto, *">
-                                <TextBlock Text="{Binding Category.Title}" Classes="t-sb t-16" Foreground="{DynamicResource Text}"></TextBlock>
-                                <ItemsControl Grid.Row="1" ItemsSource="{Binding Tasks}">
+                            <Grid RowDefinitions="Auto, *, Auto">
+                                <TextBlock Text="{Binding Category.Title}" Margin="16 0 0 3" Classes="t-sb t-20" Foreground="{Binding Category.Color, Converter={StaticResource ResourceLookupConverter}}"></TextBlock>
+                                <ItemsControl Grid.Row="1" ItemsSource="{Binding Tasks}" x:DataType="models:Node" x:Name="FilterAllItemsControlTasks">
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate DataType="models:TaskItem">
-                                            <Border Classes="task">
+                                            <Border Classes.task="True" Classes.important="{Binding IsImportant}">
                                                 <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto, Auto, Auto">
-                                                    <ToggleButton Width="32" Height="32" Classes="taskToggle" VerticalAlignment="Center" HorizontalAlignment="Left"></ToggleButton>
-                                                    <TextBlock Grid.Column="1" Classes="t-20 t-m" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0" Text="{Binding Title}"></TextBlock>
-                                                    <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="t-16 second" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
-                                                    <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="t-16 second" Margin="6 0">/</TextBlock>
-                                                    <TextBlock Grid.Column="4" VerticalAlignment="Center" Classes="t-16 second" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
-                                                    <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn">
-                                                        <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}" Foreground="{DynamicResource TaskSecondaryText}"></PathIcon>
+                                                    <ToggleButton Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                                        <Ellipse Width="16" Height="16"></Ellipse>
+                                                        <ToggleButton.Styles>
+                                                            <Style Selector=":checked /template/ ContentPresenter#PART_ContentPresenter">
+                                                                <Setter Property="BorderBrush" Value="{Binding DataContext.Category.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ElementName=FilterAllItemsControlTasks}"></Setter>
+                                                                <Setter Property="Background" Value="Transparent"></Setter>
+                                                            </Style>
+                                                            <Style Selector=":checked:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                                                                <Setter Property="BorderBrush" Value="{Binding DataContext.Category.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover, ElementName=FilterAllItemsControlTasks}"></Setter>
+                                                            </Style>
+                                                            <Style Selector=":checked Ellipse">
+                                                                 <Setter Property="Fill" Value="{Binding Path=DataContext.Category.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ElementName=FilterAllItemsControlTasks}"></Setter>
+                                                            </Style>
+                                                            <Style Selector=":checked:pointerover Ellipse">
+                                                                 <Setter Property="Fill" Value="{Binding Path=DataContext.Category.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover, ElementName=FilterAllItemsControlTasks}"></Setter>
+                                                            </Style>
+                                                        </ToggleButton.Styles>
+                                                    </ToggleButton>
+                                                    <TextBlock Grid.Column="1" Classes="taskTitle" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0" Text="{Binding Title}"></TextBlock>
+                                                    <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="dates" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
+                                                    <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="dates" Margin="6 0">/</TextBlock>
+                                                    <TextBlock Grid.Column="4" VerticalAlignment="Center" Classes="dates" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
+                                                    <Button Grid.Column="5" Width="24" Height="24" Classes="taskEdit" Command="{Binding DataContext.TaskManagerVM.EditTask, ElementName=FilterAllUserControl}" CommandParameter="{Binding}">
+                                                        <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}"></PathIcon>
                                                     </Button>
-                                                    <Button Grid.Column="6" Width="24" Height="24" Classes="taskBtn">
-                                                        <PathIcon Width="20" Height="20" Data="{StaticResource TrashIcon}" Foreground="{DynamicResource TaskTrash}"></PathIcon>
-                                                    </Button> <!--TODO Design remake -->
+                                                    <Button Grid.Column="6" Width="24" Height="24" Classes="taskTrash" Command="{Binding Path=DataContext.TaskManagerVM.RemoveTask, ElementName=FilterAllUserControl}" CommandParameter="{Binding }">
+                                                        <PathIcon Width="20" Height="20" Data="{StaticResource TrashIcon}"></PathIcon>
+                                                    </Button>
                                                 </Grid>
                                             </Border>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
+                                <Rectangle Grid.Row="2" Height="1" HorizontalAlignment="Stretch" Fill="{DynamicResource BackgroundSide}" Margin="0 6"></Rectangle>
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
