--- a/PlanIt/Views/FilterScheduledView.axaml
+++ b/PlanIt/Views/FilterScheduledView.axaml
@@ -2,7 +2,93 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:PlanIt.ViewModels"
+             xmlns:models="clr-namespace:PlanIt.Models"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="PlanIt.Views.FilterScheduledView">
-    Welcome to Avalonia!
+             x:Class="PlanIt.Views.FilterScheduledView"
+             x:DataType="vm:FilterScheduledViewModel"
+             x:Name="FilterScheduledUserControl">
+    
+    <Design.DataContext>
+        <vm:FilterScheduledViewModel></vm:FilterScheduledViewModel>
+    </Design.DataContext>
+    
+     <Grid RowDefinitions="Auto, *" RowSpacing="2">
+        <Border Padding="17 10" HorizontalAlignment="Stretch">
+            <Grid>
+                <Grid ColumnDefinitions="*, Auto">
+                    <TextBlock Classes="t-sb t-24" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="16 0 0 0" Text="Scheduled" Foreground="{DynamicResource TextScheduled}"></TextBlock>
+                    <Button Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="30" Height="30" Classes="panelBtn" Command="{Binding AddNewTask}">
+                        <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
+                        <Button.Styles>
+                            <Style Selector="">
+                                 <Setter Property="Background" Value="{DynamicResource TextScheduled}"></Setter>
+                            </Style>
+                            <Style Selector=":pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                                <Setter Property="Background" Value="{DynamicResource TextScheduledHover}"></Setter>
+                            </Style>
+                        </Button.Styles>
+                    </Button>
+                </Grid>
+            </Grid>
+        </Border>
+        <Border Grid.Row="1" Padding="17 0">
+            <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AllowAutoHide="False" Classes="mainScroll">
+                <ItemsControl ItemsSource="{Binding ViewController.NodesCollection}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="models:Node">
+                            <Grid RowDefinitions="Auto, *, Auto">
+                                <TextBlock Text="{Binding NodeTitle}" Margin="16 0 0 3" Classes="t-sb t-20" Foreground="{DynamicResource TextMain}"></TextBlock>
+                                <ItemsControl Grid.Row="1" ItemsSource="{Binding Tasks}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate DataType="models:TaskItem">
+                                            <Border Classes.task="True" Classes.important="{Binding IsImportant}">
+                                                <Grid ColumnDefinitions="*, Auto">
+                                                    <Grid ColumnDefinitions="Auto, *, Auto, Auto" HorizontalAlignment="Left">
+                                                        <ToggleButton Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                                        <Ellipse Width="16" Height="16"></Ellipse>
+                                                        <ToggleButton.Styles>
+                                                            <Style Selector=":checked /template/ ContentPresenter#PART_ContentPresenter">
+                                                                <Setter Property="BorderBrush" Value="{Binding CategoryObject.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}}"></Setter>
+                                                                <Setter Property="Background" Value="Transparent"></Setter>
+                                                            </Style>
+                                                            <Style Selector=":checked:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                                                                <Setter Property="BorderBrush" Value="{Binding CategoryObject.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover}"></Setter>
+                                                            </Style>
+                                                            <Style Selector=":checked Ellipse">
+                                                                 <Setter Property="Fill" Value="{Binding Path=CategoryObject.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}}"></Setter>
+                                                            </Style>
+                                                            <Style Selector=":checked:pointerover Ellipse">
+                                                                 <Setter Property="Fill" Value="{Binding Path=CategoryObject.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover}"></Setter>
+                                                            </Style>
+                                                        </ToggleButton.Styles>
+                                                    </ToggleButton>
+                                                    <TextBlock Grid.Column="1" Classes="taskTitle" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0" Text="{Binding Title}"></TextBlock>
+                                                    <TextBlock Grid.Column="2" Classes="taskCategory" VerticalAlignment="Center" HorizontalAlignment="Left" Text="|" ></TextBlock>
+                                                    <TextBlock Grid.Column="3" Classes="taskCategory" VerticalAlignment="Center" Margin="12 0" Text="{Binding CategoryObject.Title}"></TextBlock>
+                                                    </Grid>
+                                                    <Grid Grid.Column="1" ColumnDefinitions="Auto, Auto, Auto, Auto, Auto" HorizontalAlignment="Right">
+                                                        <TextBlock Grid.Column="0" VerticalAlignment="Center" Classes="dates" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
+                                                        <TextBlock Grid.Column="1" VerticalAlignment="Center" Classes="dates" Margin="6 0">/</TextBlock>
+                                                        <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="dates" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
+                                                        <Button Grid.Column="3" Width="24" Height="24" Classes="taskEdit" Command="{Binding DataContext.TaskManagerVM.EditTask, ElementName=FilterScheduledUserControl}" CommandParameter="{Binding}">
+                                                            <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}"></PathIcon>
+                                                        </Button>
+                                                        <Button Grid.Column="4" Width="24" Height="24" Classes="taskTrash" Command="{Binding Path=DataContext.TaskManagerVM.RemoveTask, ElementName=FilterScheduledUserControl}" CommandParameter="{Binding }">
+                                                            <PathIcon Width="20" Height="20" Data="{StaticResource TrashIcon}"></PathIcon>
+                                                        </Button>
+                                                    </Grid>
+                                                </Grid>
+                                            </Border>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                                <Rectangle Grid.Row="2" Height="1" HorizontalAlignment="Stretch" Fill="{DynamicResource BackgroundSide}" Margin="0 6"></Rectangle>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Border>
+    </Grid>
 </UserControl>
