--- a/PlanIt/Views/MainView.axaml
+++ b/PlanIt/Views/MainView.axaml
@@ -31,8 +31,8 @@
                     <Border x:Name="UpperBlock" Padding="11 8">
                         <Grid ColumnDefinitions="*, Auto">
                             <StackPanel Orientation="Horizontal" Spacing="6">
-                                <Border VerticalAlignment="Center" Height="36" Width="36" BorderThickness="1" BorderBrush="{DynamicResource StrokeButton}" Background="{DynamicResource BackgroundButton}" CornerRadius="32">
-                                    <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Data="{StaticResource ListIcon}" Foreground="{DynamicResource Text}"></PathIcon>
+                                <Border x:Name="AppLogo" VerticalAlignment="Center" Height="36" Width="36">
+                                    <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Data="{StaticResource Logo}" Foreground="{DynamicResource TextMain}"></PathIcon>
                                 </Border>
                                 <TextBlock VerticalAlignment="Center" Classes="t-b t-22">PlanIt</TextBlock>
                             </StackPanel>
@@ -41,8 +41,12 @@
                     </Border>
                     <Border Grid.Row="1" Padding="11 8 0 8">
                         <ScrollViewer AllowAutoHide="False" Classes="mainScroll">
-                            <Grid RowDefinitions="Auto, Auto, *" RowSpacing="9" x:Name="ScrollGrid">
-                                <TextBox x:Name="SearchBar" Watermark="Search..."></TextBox>
+                            <Grid RowDefinitions="Auto, Auto, *" RowSpacing="9">
+                                <TextBox x:Name="SearchBar" Watermark="Search task...">
+                                    <TextBox.KeyBindings>
+                                        <KeyBinding Gesture="Enter" Command="{Binding ShowSearchView}" CommandParameter="{Binding Text, ElementName=SearchBar}"></KeyBinding>
+                                    </TextBox.KeyBindings>
+                                </TextBox>
                                 <WrapPanel Grid.Row="1" ItemSpacing="6" LineSpacing="6">
                                     <WrapPanel.ItemWidth>
                                         <MultiBinding Converter="{StaticResource FilterBlockResponsiveWidthConverter}">
@@ -56,7 +60,7 @@
                                             <StackPanel Orientation="Vertical" Spacing="3" HorizontalAlignment="Left">
                                                 <Grid HorizontalAlignment="Left">
                                                     <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="today"></Ellipse>
-                                                    <PathIcon Height="18" Width="18" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{StaticResource CalendarDayIcon}" Foreground="{DynamicResource BackgroundSecondary}"></PathIcon>
+                                                    <PathIcon Height="18" Width="18" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{StaticResource CalendarDayIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
                                                 </Grid>
                                                 <TextBlock Classes="t-16 today t-sb" HorizontalAlignment="Left">Today</TextBlock>
                                             </StackPanel>
@@ -70,7 +74,7 @@
                                             <StackPanel Orientation="Vertical" Spacing="6" HorizontalAlignment="Left">
                                                 <Grid HorizontalAlignment="Left">
                                                     <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="scheduled"></Ellipse>
-                                                    <PathIcon HorizontalAlignment="Center" VerticalAlignment="Center" Height="18" Width="18" Data="{StaticResource CalendarManyIcon}" Foreground="{DynamicResource BackgroundSecondary}"></PathIcon>
+                                                    <PathIcon HorizontalAlignment="Center" VerticalAlignment="Center" Height="18" Width="18" Data="{StaticResource CalendarManyIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
                                                 </Grid>
                                                 <TextBlock Classes="t-16 scheduled t-sb" HorizontalAlignment="Left">Scheduled</TextBlock>
                                             </StackPanel>
@@ -84,7 +88,7 @@
                                             <StackPanel Orientation="Vertical" Spacing="6" HorizontalAlignment="Left">
                                                 <Grid HorizontalAlignment="Left">
                                                     <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="all"></Ellipse>
-                                                    <PathIcon HorizontalAlignment="Center" VerticalAlignment="Center" Height="18" Width="18" Data="{StaticResource BoxIcon}" Foreground="{DynamicResource BackgroundSecondary}"></PathIcon>
+                                                    <PathIcon HorizontalAlignment="Center" VerticalAlignment="Center" Height="18" Width="18" Data="{StaticResource BoxIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
                                                 </Grid>
                                                 <TextBlock Classes="t-16 all t-sb" HorizontalAlignment="Left">All</TextBlock>
                                             </StackPanel>
@@ -98,7 +102,7 @@
                                             <StackPanel Orientation="Vertical" Spacing="6" HorizontalAlignment="Left">
                                                 <Grid HorizontalAlignment="Left">
                                                     <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="important"></Ellipse>
-                                                    <PathIcon HorizontalAlignment="Center" VerticalAlignment="Center" Height="18" Width="18" Data="{StaticResource ExclamationIcon}" Foreground="{DynamicResource BackgroundSecondary}"></PathIcon>
+                                                    <PathIcon HorizontalAlignment="Center" VerticalAlignment="Center" Height="18" Width="18" Data="{StaticResource ExclamationIcon}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
                                                 </Grid>
                                                 <TextBlock Classes="t-16 important t-sb" HorizontalAlignment="Left">Important</TextBlock>
                                             </StackPanel>
@@ -111,8 +115,8 @@
                                 <Grid Grid.Row="2" RowDefinitions="Auto, *" RowSpacing="8">
                                     <Grid ColumnDefinitions="*, Auto">
                                         <TextBlock Classes="t-b t-22" HorizontalAlignment="Left" VerticalAlignment="Center">Categories</TextBlock>
-                                        <Button Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="30" Height="30" Classes="btn" Command="{Binding AddNewCategory}">
-                                            <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource Text}"></PathIcon>
+                                        <Button Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="30" Height="30" Classes="basicBtn" Command="{Binding AddNewCategory}">
+                                            <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource TextMain}"></PathIcon>
                                         </Button>
                                     </Grid>
                                     <ListBox x:Name="CategoryListBox" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectedItem="{Binding ViewController.SelectedCategory}" ItemsSource="{Binding ViewController.CategoriesCollection}">
@@ -121,12 +125,16 @@
                                                 <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5">
                                                     <Grid HorizontalAlignment="Left" VerticalAlignment="Center">
                                                         <Ellipse Width="26" Height="26" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="{Binding Color, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
-                                                        <PathIcon Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{Binding Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
+                                                        <PathIcon Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{Binding Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource BackgroundItems}"></PathIcon>
                                                     </Grid>
                                                     <TextBlock Grid.Column="1" Classes="t-16 t-r" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding Title}"></TextBlock>
                                                     <TextBlock Grid.Column="2" Classes="t-18 t-b" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding TasksCount}"></TextBlock>
-                                                    <Button Width="14" Height="14" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="taskBtn" Command="{Binding Path=DataContext.CategoryManagerVM.EditCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}"><PathIcon Width="12" Height="12" Data="{StaticResource EditIcon}" Foreground="{DynamicResource TaskSecondaryText}"></PathIcon></Button>
-                                                    <Button Width="14" Height="14" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="taskBtn" Command="{Binding Path=DataContext.CategoryManagerVM.RemoveCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}"><PathIcon Width="12" Height="12" Data="{StaticResource TrashIcon}" Foreground="{DynamicResource TaskTrash}"></PathIcon></Button>
+                                                    <Button Width="14" Height="14" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="categoryEdit" Command="{Binding Path=DataContext.CategoryManagerVM.EditCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}">
+                                                        <PathIcon Width="12" Height="12" Data="{StaticResource EditIcon}"></PathIcon>
+                                                    </Button>
+                                                    <Button Width="14" Height="14" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="categoryTrash" Command="{Binding Path=DataContext.CategoryManagerVM.RemoveCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}">
+                                                        <PathIcon Width="12" Height="12" Data="{StaticResource TrashIcon}"></PathIcon>
+                                                    </Button>
                                                 </Grid>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
