--- a/PlanIt/Views/TaskCreationView.axaml
+++ b/PlanIt/Views/TaskCreationView.axaml
@@ -16,36 +16,40 @@
         <Border VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="TaskLayoutBorder">
             <Grid RowDefinitions="Auto, Auto" RowSpacing="10">
                 <Grid ColumnDefinitions="Auto, *, Auto">
-                    <Button Classes="btn" Width="30" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center" Command="{Binding HideOverlay}"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource DenyIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
+                    <Button Classes="basicBtn" Width="30" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center" Command="{Binding HideOverlay}">
+                        <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource DenyIcon}" Foreground="{DynamicResource TextMain}"></PathIcon>
+                    </Button>
                     <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="t-b t-14" Foreground="{DynamicResource Text}">New Task</TextBlock>
-                    <Button Grid.Column="2" Classes="btn" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Center" Command="{Binding ApplyCreation}" CommandParameter="{Binding NewTaskItem}"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource AcceptIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
+                    <Button Grid.Column="2" Classes="basicBtn confirm" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Center" Command="{Binding ApplyCreation}" CommandParameter="{Binding NewTaskItem}">
+                        <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource AcceptIcon}" Foreground="{DynamicResource TextMain}"></PathIcon>
+                    </Button>
                 </Grid>
                 <Grid Grid.Row="1" RowDefinitions="Auto, Auto, Auto, Auto" ColumnDefinitions="*, Auto" RowSpacing="4" ColumnSpacing="10">
                     <Grid RowDefinitions="Auto, Auto">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Title</TextBlock>
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Title</TextBlock>
                         <TextBox Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Classes="basicInput" MinWidth="227" Text="{Binding NewTaskItem.Title}"></TextBox>
                     </Grid>
                     <Grid Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" RowDefinitions="Auto, *" VerticalAlignment="Stretch">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Description</TextBlock>
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Description</TextBlock>
                         <TextBox Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Classes="basicInput" TextWrapping="Wrap" AcceptsReturn="True" MinWidth="227" Text="{Binding NewTaskItem.Description}"></TextBox>
                     </Grid>
                     <Grid Grid.Row="0" Grid.Column="1" RowDefinitions="Auto, Auto">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Date</TextBlock>
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Date</TextBlock>
                         <DatePicker Grid.Row="1" Width="300" x:Name="TaskDatePicker"></DatePicker>
                     </Grid>
                     <Grid Grid.Row="1" Grid.Column="1" RowDefinitions="Auto, Auto">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Time</TextBlock>
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Time</TextBlock>
                         <TimePicker Grid.Row="1" Width="300" x:Name="TaskTimePicker"></TimePicker>
                     </Grid>
                     <Grid Grid.Row="2" Grid.Column="1" RowDefinitions="Auto, Auto" ColumnDefinitions="50*, 50*" ColumnSpacing="6">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Repeat</TextBlock>
-                        <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Notify</TextBlock>
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Repeat</TextBlock>
+                        <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Notify</TextBlock>
                         <ComboBox Grid.Row="1" Grid.Column="0" Width="147" ItemsSource="{Binding ViewController.RepeatComboCollection}" SelectedIndex="{Binding SelectedRepeatIndex}"></ComboBox>
                         <ComboBox Grid.Row="1" Grid.Column="1" Width="147" ItemsSource="{Binding ViewController.NotifyBeforeComboCollection}" SelectedIndex="{Binding SelectedNotifyIndex}"></ComboBox>
                     </Grid>
                     <Grid Grid.Row="3" Grid.Column="1" RowDefinitions="Auto, Auto" ColumnDefinitions="50*, 50*" ColumnSpacing="6">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Priority</TextBlock>
-                        <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Category</TextBlock>
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Priority</TextBlock>
+                        <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextSecondary}">Category</TextBlock>
                         <ComboBox Grid.Row="1" Grid.Column="0" Width="147" ItemsSource="{Binding ViewController.ImportanceComboCollection}" SelectedIndex="{Binding SelectedImportanceIndex}"></ComboBox>
                         <ComboBox Grid.Row="1" Grid.Column="1" Width="147" ItemsSource="{Binding ViewController.CategoriesCollection}" SelectedIndex="{Binding SelectedCategoryIndex}"></ComboBox>
                     </Grid>
