--- a/PlanIt/PlanIt.UI/App.axaml
+++ b/PlanIt/PlanIt.UI/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="PlanIt.App"
-             xmlns:views="clr-namespace:PlanIt.Views"
+             x:Class="PlanIt.UI.App"
+             xmlns:views="clr-namespace:PlanIt.UI.Views"
              xmlns:vm="clr-namespace:PlanIt.UI.ViewModels"
              RequestedThemeVariant="Dark">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -35,6 +35,6 @@
   
     <Application.Styles>
         <FluentTheme />
-        <StyleInclude Source="Assets/Styles/Styles.axaml"></StyleInclude>
+        <StyleInclude Source="avares://PlanIt.UI/Styles/Styles.axaml"></StyleInclude>
     </Application.Styles>
 </Application>
