--- a/PlanIt/PlanIt.UI/Views/FilterImportantView.axaml
+++ b/PlanIt/PlanIt.UI/Views/FilterImportantView.axaml
@@ -2,10 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:models="clr-namespace:PlanIt.Core.Models;assembly=PlanIt.Core"
              xmlns:vm="clr-namespace:PlanIt.UI.ViewModels"
+             xmlns:models="clr-namespace:PlanIt.Data.Models;assembly=PlanIt.Data"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="PlanIt.Views.FilterImportantView"
+             x:Class="PlanIt.UI.Views.FilterImportantView"
              x:DataType="vm:FilterImportantViewModel"
              x:Name="FilterImportantUserControl">
     
@@ -37,10 +37,10 @@
                 <ItemsControl ItemsSource="{Binding ViewController.TasksCollection}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate DataType="models:TaskItem">
-                            <Border Classes="task important">
+                            <Border Classes.task="True" Classes.important="True" Classes.missed="{Binding IsMissed}" Classes.completed="{Binding IsDone}">
                                 <Grid ColumnDefinitions="*, Auto">
                                     <Grid ColumnDefinitions="Auto, *, Auto, Auto" HorizontalAlignment="Left">
-                                        <ToggleButton Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                        <ToggleButton Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding IsDone, Mode=OneWay}" Command="{Binding DataContext.TaskManagerVM.MarkTask, ElementName=FilterImportantUserControl}" CommandParameter="{Binding}">
                                         <Ellipse Width="16" Height="16"></Ellipse>
                                         <ToggleButton.Styles>
                                             <Style Selector=":checked /template/ ContentPresenter#PART_ContentPresenter">
