--- a/PlanIt/PlanIt.UI/Views/WindowView.axaml
+++ b/PlanIt/PlanIt.UI/Views/WindowView.axaml
@@ -2,10 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:models="clr-namespace:PlanIt.Core.Models;assembly=PlanIt.Core"
              xmlns:vm="clr-namespace:PlanIt.UI.ViewModels"
+             xmlns:models="clr-namespace:PlanIt.Data.Models;assembly=PlanIt.Data"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="PlanIt.Views.WindowView"
+             x:Class="PlanIt.UI.Views.WindowView"
              x:DataType="vm:WindowViewModel"
              x:Name="WindowUserControl">
     
@@ -45,36 +45,40 @@
                     <ItemsControl x:Name="TasksItemsControl" ItemsSource="{Binding ViewController.TasksCollection}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="models:TaskItem">
-                                <Border Classes.task="True" Classes.important="{Binding IsImportant}">
-                                    <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto, Auto, Auto">
-                                        <ToggleButton Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Left">
-                                            <Ellipse Width="16" Height="16"></Ellipse>
-                                            <ToggleButton.Styles>
-                                                <Style Selector=":checked /template/ ContentPresenter#PART_ContentPresenter">
-                                                    <Setter Property="BorderBrush" Value="{Binding DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ElementName=WindowUserControl}"></Setter>
-                                                    <Setter Property="Background" Value="Transparent"></Setter>
-                                                </Style>
-                                                <Style Selector=":checked:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                                                    <Setter Property="BorderBrush" Value="{Binding DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover, ElementName=WindowUserControl}"></Setter>
-                                                </Style>
-                                                <Style Selector=":checked Ellipse">
-                                                     <Setter Property="Fill" Value="{Binding Path=DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ElementName=WindowUserControl}"></Setter>
-                                                </Style>
-                                                <Style Selector=":checked:pointerover Ellipse">
-                                                     <Setter Property="Fill" Value="{Binding Path=DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover, ElementName=WindowUserControl}"></Setter>
-                                                </Style>
-                                            </ToggleButton.Styles>
-                                        </ToggleButton>
-                                        <TextBlock Grid.Column="1" Classes="taskTitle" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0" Text="{Binding Title}"></TextBlock>
-                                        <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="dates" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
-                                        <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="dates" Margin="6 0">/</TextBlock>
-                                        <TextBlock Grid.Column="4" VerticalAlignment="Center" Classes="dates" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
-                                        <Button Grid.Column="5" Width="24" Height="24" Classes="taskEdit" Command="{Binding DataContext.TaskManagerVM.EditTask, ElementName=WindowUserControl}" CommandParameter="{Binding}">
-                                            <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}"></PathIcon>
-                                        </Button>
-                                        <Button Grid.Column="6" Width="24" Height="24" Classes="taskTrash" Command="{Binding Path=DataContext.TaskManagerVM.RemoveTask, ElementName=WindowUserControl}" CommandParameter="{Binding }">
-                                            <PathIcon Width="20" Height="20" Data="{StaticResource TrashIcon}"></PathIcon>
-                                        </Button>
+                                <Border Classes.task="True" Classes.important="{Binding IsImportant}" Classes.missed="{Binding IsMissed}" Classes.completed="{Binding IsDone}">
+                                    <Grid ColumnDefinitions="*, Auto">
+                                        <Grid ColumnDefinitions="Auto, *" HorizontalAlignment="Left">
+                                            <ToggleButton Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Left"  IsChecked="{Binding IsDone, Mode=OneWay}" Command="{Binding DataContext.TaskManagerVM.MarkTask, ElementName=WindowUserControl}" CommandParameter="{Binding}">
+                                                <Ellipse Width="16" Height="16"></Ellipse>
+                                                <ToggleButton.Styles>
+                                                    <Style Selector=":checked /template/ ContentPresenter#PART_ContentPresenter">
+                                                        <Setter Property="BorderBrush" Value="{Binding DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ElementName=WindowUserControl}"></Setter>
+                                                        <Setter Property="Background" Value="Transparent"></Setter>
+                                                    </Style>
+                                                    <Style Selector=":checked:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                                                        <Setter Property="BorderBrush" Value="{Binding DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover, ElementName=WindowUserControl}"></Setter>
+                                                    </Style>
+                                                    <Style Selector=":checked Ellipse">
+                                                         <Setter Property="Fill" Value="{Binding Path=DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ElementName=WindowUserControl}"></Setter>
+                                                    </Style>
+                                                    <Style Selector=":checked:pointerover Ellipse">
+                                                         <Setter Property="Fill" Value="{Binding Path=DataContext.ViewController.SelectedCategory.Color, FallbackValue=Default, Converter={StaticResource ResourceLookupConverter}, ConverterParameter=Hover, ElementName=WindowUserControl}"></Setter>
+                                                    </Style>
+                                                </ToggleButton.Styles>
+                                            </ToggleButton>
+                                            <TextBlock Grid.Column="1" Classes="taskTitle" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0" Text="{Binding Title}"></TextBlock>
+                                        </Grid>
+                                        <Grid Grid.Column="1" ColumnDefinitions="Auto, Auto, Auto, Auto, Auto" HorizontalAlignment="Right">
+                                            <TextBlock Grid.Column="0" VerticalAlignment="Center" Classes="dates" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
+                                            <TextBlock Grid.Column="1" VerticalAlignment="Center" Classes="dates" Margin="6 0">/</TextBlock>
+                                            <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="dates" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
+                                            <Button Grid.Column="3" Width="24" Height="24" Classes="taskEdit" Command="{Binding DataContext.TaskManagerVM.EditTask, ElementName=WindowUserControl}" CommandParameter="{Binding}">
+                                                <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}"></PathIcon>
+                                            </Button>
+                                            <Button Grid.Column="4" Width="24" Height="24" Classes="taskTrash" Command="{Binding Path=DataContext.TaskManagerVM.RemoveTask, ElementName=WindowUserControl}" CommandParameter="{Binding }">
+                                                <PathIcon Width="20" Height="20" Data="{StaticResource TrashIcon}"></PathIcon>
+                                            </Button>
+                                        </Grid>
                                     </Grid>
                                 </Border>
                             </DataTemplate>
